--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ p,
 h1,
 h3,
 button,
-span {
+span,
+input {
   font-family: Azeret Mono;
 }
 .banner-section {
@@ -192,4 +193,41 @@ button {
   color: rgb(33, 31, 31);
 
   text-decoration: underline;
+}
+
+.support-section {
+  width: 1240px;
+  margin: auto;
+  text-align: center;
+  background-image: url(./assets/handshake.jpg);
+
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./assets/handshake.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 70px 0;
+  border-radius: 16px;
+  background-color: ;
+  color: #fff;
+}
+.support-section input {
+  margin-top: 20px;
+  width: 548px;
+  height: 57px;
+  border-radius: 8px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+
+  padding-left: 20px;
+  font-size: 16px;
+}
+.support-section button {
+  background-color: #fff;
+  color: #36383a;
+  font-weight: 800;
+}
+.support-section p {
+  margin-top: 20px;
+}
+.support-section {
 }
