--- a/style.css
+++ b/style.css
@@ -24,12 +24,13 @@ input {
   background-size: cover;
   text-align: center;
 }
-button {
+.banner-section button {
   color: red;
   border-radius: 8px;
   background: rgb(13, 19, 33);
   padding: 21px 24px 21px 24px;
   color: #99c1da;
+  cursor: pointer;
 }
 .banner-section h2 {
   color: rgb(13, 19, 33);
@@ -221,6 +222,12 @@ button {
   padding-left: 20px;
   font-size: 16px;
 }
+.support-btn {
+  width: 96px;
+  height: 55px;
+  border-radius: 8px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+}
 .support-section button {
   background-color: #fff;
   color: #36383a;
@@ -228,8 +235,6 @@ button {
 }
 .support-section p {
   margin-top: 20px;
-}
-.support-section {
 }
 
 .footer {
